argocd/platform/vault/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    gateway.scg.sh/public: "true"
