argocd/platform/vault/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: platform-https
  hostnames:
    - vault.platform.scg.sh
  rules:
    - backendRefs:
        - name: vault-active
          port: 8200
